update the code v1.2 valid work of push and loader

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
     <div class="loader" id="pre_load">
       <div class="load_bar"></div>
       <p class="load_title">Loading data...</p>
-      <div class="load_data_bar">
+      <!-- <div class="load_data_bar">
         <div class="load_line"></div>
-      </div>
+      </div> -->
     </div>
     <div class="content">
       <h1 class="page_title">LogIn</h1>
