--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -11,11 +11,11 @@
 <body>
     <div class="loader" id="pre_load" style="display: none;">
         <div class="load_bar"></div>
-            <p class="load_title">Loading data...</p>
-        <div class="load_data_bar">
-            <div class="load_line"></div>
-        </div>
-    </div>
+        <p class="load_title">Loading data...</p>
+        <!-- <div class="load_data_bar">
+          <div class="load_line"></div>
+        </div> -->
+      </div>
     <div class="wrapper">
         <header class="header pos_relative">
             <div class="left_side_header">
