--- a/src/pages/owner_dashboard.html
+++ b/src/pages/owner_dashboard.html
@@ -11,10 +11,10 @@
 <body>
     <div class="loader" id="pre_load" style="display: none;">
         <div class="load_bar"></div>
-            <p class="load_title">Loading data...</p>
-        <div class="load_data_bar">
-            <div class="load_line"></div>
-        </div>
+        <p class="load_title">Loading data...</p>
+        <!-- <div class="load_data_bar">
+          <div class="load_line"></div>
+        </div> -->
     </div>
     <div class="cuter">
         <div class="agents_list_body">
