output agents list

--- a/src/pages/owner_dashboard.html
+++ b/src/pages/owner_dashboard.html
@@ -20,6 +20,7 @@
         <div class="agents_list_body">
             <p class="profit_style">Total margin: <span class="profit">$0</span></p>
             <div class="agents_list">
+                <!-- TODO: Заняться выовдом агентов -->
             </div>
         </div>
         <div class="wrapper">
