--- a/src/pages/registration.html
+++ b/src/pages/registration.html
@@ -7,8 +7,12 @@
     <script src="./reg.js" defer></script> <!-- JS -->
   </head>
   <body>
-    <div class="loader">
-      <div class="load_bar"></div>
+    <div class="loader" id="pre_load" style="display: none;">
+        <div class="load_bar"></div>
+        <p class="load_title">Loading data...</p>
+        <!-- <div class="load_data_bar">
+          <div class="load_line"></div>
+        </div> -->
     </div>
     <div class="content">
       <h1 class="page_title">Singup</h1>
