--- a/src/pages/new_rc.html
+++ b/src/pages/new_rc.html
@@ -24,8 +24,8 @@
             <div style="display: flex; flex-direction: column;">
                 <div style="display: flex; flex-direction: row;">
                     <select name="type_of_rc" id="type_of_rc" class="input_area"></select>
-                    <input type="checkbox" class="checkbox" name="checkbox_of_scam" id="checkbox_of_scam" value="scam">
-                    <label for="checkbox_of_scam" class="checkbox_lable">SCAM</label>
+                    <input type="checkbox" class="checkbox" name="checkbox_of_scam" id="checkbox_of_db" value="db">
+                    <label for="checkbox_of_scam" class="checkbox_lable">Brokering</label>
                 </div>
                 <textarea class="broker_name_ textarea_input" placeholder="Broker companey data"></textarea>
                 <div style="display: flex; flex-direction: row;">
